--- a/src/main/resources/com/catchabreak/primary.fxml
+++ b/src/main/resources/com/catchabreak/primary.fxml
@@ -7,23 +7,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.1826625386996904" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.HomeController">
+<SplitPane dividerPositions="0.21551724137931033" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.HomeController">
   <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="58.0" style="-fx-background-color: #A1B2D3;">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="198.0" prefWidth="70.0" style="-fx-background-color: #A1B2D3;">
          <children>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="8.0" layoutY="14.0">
+            <ImageView fitHeight="46.0" fitWidth="46.0" layoutX="13.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../../Desktop/settings.png" />
+                  <Image url="@../../icons/settings.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="8.0" layoutY="69.0">
+            <ImageView fitHeight="46.0" fitWidth="46.0" layoutX="13.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../../Desktop/bar-graph.png" />
+                  <Image url="@../../icons/stats.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="8.0" layoutY="124.0">
+            <ImageView fitHeight="46.0" fitWidth="46.0" layoutX="13.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../../Desktop/information.png" />
+                  <Image url="@../../icons/info.png" />
                </image>
             </ImageView>
          </children></AnchorPane>
@@ -34,7 +34,7 @@
                   <Font size="28.0" />
                </font>
             </Label>
-            <Label fx:id="timerLabel" layoutX="69.0" layoutY="63.0" text="00:00:00">
+            <Label fx:id="timerLabel" layoutX="69.0" layoutY="54.0" text="00:00:00">
                <font>
                   <Font size="36.0" />
                </font>
