--- a/src/main/resources/com/catchabreak/primary.fxml
+++ b/src/main/resources/com/catchabreak/primary.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.21551724137931033" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.HomeController">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="198.0" prefWidth="70.0" style="-fx-background-color: #A1B2D3;">
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="70.0" style="-fx-background-color: #A1B2D3;">
          <children>
             <ImageView fitHeight="46.0" fitWidth="46.0" layoutX="13.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -26,8 +27,9 @@
                   <Image url="@../../icons/info.png" />
                </image>
             </ImageView>
-         </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="156.0" prefWidth="265.0" style="-fx-background-color: #AEE0EC;">
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="70.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="280.0" style="-fx-background-color: #AEE0EC;">
          <children>
             <Label layoutX="47.0" layoutY="14.0" text="Catch a Break!">
                <font>
@@ -39,6 +41,7 @@
                   <Font size="36.0" />
                </font>
             </Label>
-         </children></AnchorPane>
-  </items>
-</SplitPane>
+         </children>
+      </AnchorPane>
+   </children>
+</Pane>
