--- a/src/main/resources/com/catchabreak/primary.fxml
+++ b/src/main/resources/com/catchabreak/primary.fxml
@@ -40,6 +40,21 @@
                   <Font size="36.0" />
                </font>
             </Label>
+            <ImageView fx:id="playTimerImage" fitHeight="36.0" fitWidth="36.0" layoutX="69.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../icons/play.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="stopTimerImage" fitHeight="36.0" fitWidth="36.0" layoutX="117.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../icons/pause.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="restartTimerImage" fitHeight="36.0" fitWidth="36.0" layoutX="166.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../icons/reset.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
