--- a/src/main/resources/com/catchabreak/primary.fxml
+++ b/src/main/resources/com/catchabreak/primary.fxml
@@ -7,54 +7,59 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.HomeController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.HomeController">
    <children>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="70.0" style="-fx-background-color: #A1B2D3;">
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="70.0" style="-fx-background-color: #A1B2D3;">
          <children>
-            <ImageView fitHeight="42.0" fitWidth="42.0" layoutX="13.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/settings.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="42.0" fitWidth="42.0" layoutX="13.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/stats.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="42.0" fitWidth="42.0" layoutX="13.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/info.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="70.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="280.0" style="-fx-background-color: #AEE0EC;">
+      <AnchorPane layoutX="70.0" minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #AEE0EC;">
          <children>
-            <Label layoutX="47.0" layoutY="14.0" text="Catch a Break!">
+            <Label fx:id="timerLabel" layoutX="69.0" layoutY="72.0" prefWidth="136.0" text="00:00:00" underline="true">
                <font>
-                  <Font size="28.0" />
+                  <Font name="Gadugi" size="36.0" />
                </font>
             </Label>
-            <Label fx:id="timerLabel" layoutX="69.0" layoutY="54.0" text="00:00:00">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Label>
-            <ImageView fx:id="playTimerImage" fitHeight="36.0" fitWidth="36.0" layoutX="69.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="playTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="49.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/play.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="stopTimerImage" fitHeight="36.0" fitWidth="36.0" layoutX="117.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="stopTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="117.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/pause.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="restartTimerImage" fitHeight="36.0" fitWidth="36.0" layoutX="166.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="restartTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="185.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/reset.png" />
                </image>
             </ImageView>
+            <Label fx:id="workLabel" contentDisplay="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="46.0" prefWidth="194.0" text="Time to work!" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial" size="32.0" />
+               </font>
+            </Label>
+            <Label fx:id="breakLabel" contentDisplay="CENTER" layoutX="30.0" layoutY="14.0" prefHeight="46.0" prefWidth="214.0" text="Catch a break!" textAlignment="CENTER" visible="false">
+               <font>
+                  <Font name="Arial" size="32.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
