--- a/src/main/resources/com/catchabreak/primary.fxml
+++ b/src/main/resources/com/catchabreak/primary.fxml
@@ -11,7 +11,7 @@
    <children>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="70.0" style="-fx-background-color: #A1B2D3;">
          <children>
-            <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" onMouseClicked="#switchToSettings" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/settings.png" />
                </image>
