--- a/src/main/resources/com/catchabreak/settings.fxml
+++ b/src/main/resources/com/catchabreak/settings.fxml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.SettingsController">
+   <children>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="350.0" style="-fx-background-color: #AEE0EC;">
+         <children>
+            <Label layoutX="118.0" text="Settings">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <CheckBox layoutX="258.0" layoutY="189.0" mnemonicParsing="false" text="On startup" />
+            <Label layoutX="114.0" layoutY="67.0" text="Work time:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="114.0" layoutY="100.0" text="Break time:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <ChoiceBox layoutX="198.0" layoutY="65.0" prefHeight="25.0" prefWidth="47.0" />
+            <ChoiceBox layoutX="198.0" layoutY="96.0" prefHeight="25.0" prefWidth="47.0" />
+            <Button fx:id="backButton" layoutX="14.0" layoutY="185.0" mnemonicParsing="false" onMouseClicked="#switchToPrimary" prefHeight="25.0" prefWidth="57.0" text="Back" />
+         </children>
+      </AnchorPane>
+   </children>
+</Pane>
