--- a/src/main/resources/com/catchabreak/settings.fxml
+++ b/src/main/resources/com/catchabreak/settings.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -18,19 +18,29 @@
                </font>
             </Label>
             <CheckBox layoutX="258.0" layoutY="189.0" mnemonicParsing="false" text="On startup" />
-            <Label layoutX="114.0" layoutY="67.0" text="Work time:">
+            <Label layoutX="65.0" layoutY="90.0" text="Work time:">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="114.0" layoutY="100.0" text="Break time:">
+            <Label layoutX="65.0" layoutY="121.0" text="Break time:">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <ChoiceBox layoutX="198.0" layoutY="65.0" prefHeight="25.0" prefWidth="47.0" />
-            <ChoiceBox layoutX="198.0" layoutY="96.0" prefHeight="25.0" prefWidth="47.0" />
             <Button fx:id="backButton" layoutX="14.0" layoutY="185.0" mnemonicParsing="false" onMouseClicked="#switchToPrimary" prefHeight="25.0" prefWidth="57.0" text="Back" />
+            <TextField fx:id="workTextField" layoutX="147.0" layoutY="88.0" prefHeight="25.0" prefWidth="57.0" />
+            <TextField fx:id="breakTextField" layoutX="147.0" layoutY="119.0" prefHeight="25.0" prefWidth="57.0" />
+            <Label layoutX="212.0" layoutY="90.0" text="minutes">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="212.0" layoutY="121.0" text="minutes">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
