--- a/src/main/resources/com/catchabreak/primary.fxml
+++ b/src/main/resources/com/catchabreak/primary.fxml
@@ -7,53 +7,41 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0"
-      prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.catchabreak.HomeController">
-   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="70.0"
-               style="-fx-background-color: #A1B2D3;">
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" onMouseClicked="#switchToSettings"
-                 pickOnBounds="true" preserveRatio="true">
-         <Image url="@../../icons/settings.png"/>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.HomeController">
+   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="70.0" style="-fx-background-color: #A1B2D3;">
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" onMouseClicked="#switchToSettings" pickOnBounds="true" preserveRatio="true">
+         <Image url="@../../icons/settings.png" />
       </ImageView>
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="88.0" pickOnBounds="true"
-                 preserveRatio="true">
-         <Image url="@../../icons/stats.png"/>
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@../../icons/stats.png" />
       </ImageView>
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="162.0" pickOnBounds="true"
-                 preserveRatio="true">
-         <Image url="@../../icons/info.png"/>
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@../../icons/info.png" />
       </ImageView>
    </AnchorPane>
-   <AnchorPane layoutX="70.0" minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="280.0"
-               style="-fx-background-color: #AEE0EC;">
-      <Label fx:id="timerLabel" layoutX="69.0" layoutY="72.0" prefWidth="136.0" text="00:00:00" underline="true">
+   <AnchorPane layoutX="70.0" minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #AEE0EC;">
+      <Label fx:id="timerLabel" layoutX="69.0" layoutY="72.0" prefHeight="44.0" prefWidth="194.0" text="00:00:00" underline="true">
          <font>
-            <Font name="Gadugi" size="36.0"/>
+            <Font name="Gadugi" size="36.0" />
          </font>
       </Label>
-      <ImageView fx:id="playTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="49.0" layoutY="149.0"
-                 pickOnBounds="true" preserveRatio="true">
-         <Image url="@../../icons/play.png"/>
+      <ImageView fx:id="playTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="49.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@../../icons/play.png" />
       </ImageView>
-      <ImageView fx:id="stopTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="117.0" layoutY="149.0"
-                 pickOnBounds="true" preserveRatio="true">
-         <Image url="@../../icons/pause.png"/>
+      <ImageView fx:id="stopTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="117.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@../../icons/pause.png" />
       </ImageView>
-      <ImageView fx:id="restartTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="185.0" layoutY="149.0"
-                 pickOnBounds="true" preserveRatio="true">
-         <Image url="@../../icons/reset.png"/>
+      <ImageView fx:id="restartTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="185.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@../../icons/reset.png" />
       </ImageView>
-      <Label fx:id="workLabel" contentDisplay="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="46.0"
-             prefWidth="194.0" text="Time to work!" textAlignment="CENTER">
+      <Label fx:id="workLabel" contentDisplay="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="46.0" prefWidth="194.0" text="Time to work!" textAlignment="CENTER">
          <font>
-            <Font name="Arial" size="32.0"/>
+            <Font name="Arial" size="32.0" />
          </font>
       </Label>
-      <Label fx:id="breakLabel" contentDisplay="CENTER" layoutX="30.0" layoutY="14.0" prefHeight="46.0"
-             prefWidth="214.0" text="Catch a break!" textAlignment="CENTER" visible="false">
+      <Label fx:id="breakLabel" contentDisplay="CENTER" layoutX="30.0" layoutY="14.0" prefHeight="46.0" prefWidth="214.0" text="Catch a break!" textAlignment="CENTER" visible="false">
          <font>
-            <Font name="Arial" size="32.0"/>
+            <Font name="Arial" size="32.0" />
          </font>
       </Label>
    </AnchorPane>
