--- a/src/main/resources/com/catchabreak/primary_dark.fxml
+++ b/src/main/resources/com/catchabreak/primary_dark.fxml
@@ -12,7 +12,7 @@
       <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" onMouseClicked="#switchToSettings" pickOnBounds="true" preserveRatio="true">
          <Image url="@../../icons/settings.png" />
       </ImageView>
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="88.0" onMouseClicked="#switchToStats" pickOnBounds="true" preserveRatio="true">
          <Image url="@../../icons/stats.png" />
       </ImageView>
       <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true">
@@ -34,12 +34,12 @@
       <ImageView fx:id="restartTimerImage" fitHeight="40.0" fitWidth="40.0" layoutX="185.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
          <Image url="@../../icons/reset.png" />
       </ImageView>
-        <Label fx:id="workLabel" contentDisplay="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="46.0" prefWidth="194.0" text="Time to work!" textFill="WHITE" textAlignment="CENTER">
+        <Label fx:id="workLabel" contentDisplay="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="46.0" prefWidth="194.0" text="Time to work!" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial" size="32.0" />
          </font>
       </Label>
-      <Label fx:id="breakLabel" contentDisplay="CENTER" layoutX="30.0" layoutY="14.0" prefHeight="46.0" prefWidth="214.0" text="Catch a break!" textFill="WHITE" textAlignment="CENTER" visible="false">
+      <Label fx:id="breakLabel" contentDisplay="CENTER" layoutX="30.0" layoutY="14.0" prefHeight="46.0" prefWidth="214.0" text="Catch a break!" textAlignment="CENTER" textFill="WHITE" visible="false">
          <font>
             <Font name="Arial" size="32.0" />
          </font>
