--- a/src/main/resources/com/catchabreak/primary_light.fxml
+++ b/src/main/resources/com/catchabreak/primary_light.fxml
@@ -12,7 +12,7 @@
       <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" onMouseClicked="#switchToSettings" pickOnBounds="true" preserveRatio="true">
          <Image url="@../../icons/settings.png" />
       </ImageView>
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="88.0" onMouseClicked="#switchToStats" pickOnBounds="true" preserveRatio="true">
          <Image url="@../../icons/stats.png" />
       </ImageView>
       <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true">
