--- a/src/main/resources/com/catchabreak/primary_dark.fxml
+++ b/src/main/resources/com/catchabreak/primary_dark.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.HomeController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.catchabreak.Controller.HomeController">
    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="220.0" prefWidth="70.0" style="-fx-background-color: #3e5163;">
       <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="13.0" layoutY="14.0" onMouseClicked="#switchToSettings" pickOnBounds="true" preserveRatio="true">
          <Image url="@../../icons/settings.png" />
